Dockerfile USER change and web-deploy spec image modification.

--- a/code-k8s/Dockerfile
+++ b/code-k8s/Dockerfile
@@ -1,6 +1,7 @@
 FROM centos:centos7
 
 LABEL MAINTAINER=nigelpoulton@hotmail.com
+USER root
 
 # Install Node etc...
 RUN yum -y update; yum clean all
