Revert "Merge branch 'master"
This reverts commit 1e0de41a9bc85ade9cdcb778f060d901cb7aeb7e, reversing
changes made to 9befeef7c3713093571b574af1f87468362b3d33.

--- a/lesson-storage/gke-pv.yml
+++ b/lesson-storage/gke-pv.yml
@@ -10,4 +10,4 @@ spec:
     storage: 20Gi
   persistentVolumeReclaimPolicy: Retain
   gcePersistentDisk:
-    pdName: kdd-uber-disk  
+    pdName: uber-disk  
