--- a/lesson-storage/gke-volpod.yml
+++ b/lesson-storage/gke-volpod.yml
@@ -3,18 +3,18 @@ kind: Pod
 metadata:
   name: volpod
 spec:
-  containers:
-    - name: ubuntu-ctr
-      image: ubuntu:latest
-      command:
-      - /bin/bash
-      - "-c"
-      - "sleep 60m"
-      imagePullPolicy: IfNotPresent
-      volumeMounts:
-        - mountPath: /data
-          name: data
   volumes:
-  - name: data
+    - name: data
     persistentVolumeClaim:
       claimName: pvc1
+containers:
+  - name: ubuntu-ctr
+    image: ubuntu:latest
+    command:
+    - /bin/bash
+    - "-c"
+    - "sleep 60m"
+    imagePullPolicy: IfNotPresent
+    volumeMounts:
+    - mountpath: /data
+      name: data
