--- a/lesson-deployment/deploy.yml
+++ b/lesson-deployment/deploy.yml
@@ -5,14 +5,14 @@ metadata:
     run: test
   name: test
 spec:
-  replicas: 3
+  replicas: 6
   selector:
     matchLabels:
       run: test
   minReadySeconds: 5
   strategy:
     rollingUpdate:
-      maxSurge: 1
+      maxSurge: 50%
       maxUnavailable: 0
     type: RollingUpdate
   template:
@@ -21,5 +21,5 @@ spec:
         run: test
     spec:
       containers:
-      - image: nginx:1.12
+      - image: nginx:1.14
         name: nginx
